all files added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sri Supratik Talari: Personal Site and Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sri Supratik Talari</h1>
-    <p>I am a Data Science Major and I was born in India but raised my whole life in America</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="contact/index.html">Contact</a>
+        <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
+    </nav>
+
+    <h1>Welcome to Sri Supratik Talari's Portfolio</h1>
+    <p>I like long walks and enjoy exploring new places.</p>
+
+    <img src="images/profile.jpg" alt="A profile picture of Sri Supratik Talari smiling" width="300">
 </body>
 </html>
