--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,68 @@
         <a href="index.html">Resume</a>
     </nav>
 
-    <h1>My Projects</h1>
-    <p>Here are some of the projects I have worked on.</p>
+    <h1>Resume</h1>
+    <article>
+        <h2>Target</h2>
+        <p>A Career in Data Science with an emphasis on A.I and machine learning</p>
+    </article>
+      
+    <article>
+        <h2>Summary</h2>
+        <p>I am a Data Science major with experience in applying effective problem-solving and analytical skills to
+            machine learning models and real-world. I have on multiple occasions successfully integrated myself in team
+            settings and help promote collaboration and productivity. My ambition is to one day be an integral part of team
+            that creates a revolutionary A.I program that affects everyday life.</p>
+    </article>
+      
+    <article>
+        <h2>Professional</h2>
+        <ul>
+            <li>I love to seek out challenges and opportunities to expand my professional skills.</li>
+            <li>Communicating with others especially when presenting or collaborating with team members and upper
+                management comes easily to me.</li>
+            <li>I like to keep a positive mindset and try to influence others to do the same</li>
+            <li>I utilize active listening skills to understand others&#39; perspectives, opinions, and their feedback to help
+                achieve success as a group.</li>
+        </ul>
+    </article>
+    <article>
+        <h2>Skills</h2>
+        <h3>Data Science:</h3>
+        <p>Principles of Data Science, Theoretical Foundations of Data Science, and Programming/Data
+            Structures for Data Science.</p>
+        <h3>Coding Languages:</h3>
+        <p>Java, C++, Python</p>
+        <h3>Platforms:</h3>
+        <p>Jupyter Notebook, Google Colab</p>
+        <h3>Noteworthy topics:</h3>
+        <p>Manipulating/Handling Real world Data Frames, Data Visualization, Deep Learning,
+            Optimization, Model Evaluation, Regression, TensorFlow, NumPy, Pandas, Scikit-learn, and Stats models,
+            TimeSeries, Large language model, linear algebra, calculus, probability, and statistics, Probability and
+            Simulation, Dictionaries, files, list comprehension, lambda functions, control flow, high order functions,
+            complexity, recursion, classes and objects, inheritance, mutable data abstraction barriers, Object Oriented
+            Programming, Algorithms, Decision Trees, Regression, Search Trees, Machine Learning Models</p>
+    <article>
+        <h2>Education</h2>
+        <p>UC San Diego, BS in Data Science; San Diego, CA</p>
+        <time>Jun-2026</time>
+    </article>
+    <article>
+        <h2>Relative Experience</h2>
+        <h3>Inspirit A.I: Researcher/Programmer</h3>
+        <p>Inspirit A.I is a mentorship program where individuals are paired with industry professionals to collaborate on
+            research projects. My project used an in-depth dataset on air pollutant levels across the United States with the
+            end goal of creating a predictive model to forecast future pollutant levels in a given city.</p>
+        <ul>
+            <li>I worked with Seaborn, Matplotlib, Pandas, and NumPy to analyze and visualize the dataset.</li>
+            <li>Applied practical application of filtration techniques (Querying, Feature Engineering/Selection),
+                Seasonal Decomposition, Data Smoothing.</li>
+            <li>Split, trained, and tested SARIMA, ARIMA, and Prophet models with hyperparameter tuning to make
+                predictions.</li>
+            <li>Authored a research article published on Medium titled &#39;O3 OH NO: Time-Based Machine Learning
+                Model to Predict Ozone Levels in New York City,&#39; where I showcased my findings and methodologies.</li>
+        </ul>
+        <time>Oct 2023 - Apr 2024</time>
+    </article>
 </body>
 </html>
