--- a/contact/index.html
+++ b/contact/index.html
@@ -12,6 +12,7 @@
         <a href="../projects/index.html">Projects</a>
         <a href="index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
+        <a href="../resume/index.html">Resume</a>
     </nav>
 
     <form action="mailto:youremail@example.com" method="POST" enctype="text/plain">
