final changes made

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
         <a href="../resume/index.html">Resume</a>
     </nav>
-
+    <h2>Contact</h2>
     <form action="mailto:youremail@example.com" method="POST" enctype="text/plain">
         <label> Email:
             <input name="email" type="email">
