--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="resume/index.html">Resume</a>
     </nav>
 
-    <h1>Welcome to Sri Supratik Talari's Portfolio</h1>
-    <p>I like long walks and enjoy exploring new places.</p>
+    <h1>Sri Supratik Talari</h1>
+    <p>I am a Data Science Major at UCSD as a Junior.</p>
 
     <img src="images/profile.jpg" alt="A profile picture of Sri Supratik Talari smiling" width="300">
 </body>
