--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,6 @@
         <a href="../resume/index.html">Resume</a>
     </nav>
 
-    <h1>My Projects</h1>
-    <p>Here are some of the projects I have worked on.</p>
+    <h1>Projects</h1>
 </body>
 </html>
