--- a/projects/index.html
+++ b/projects/index.html
@@ -9,12 +9,74 @@
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="index.html">Projects</a>
+        <a href="index.html" class="current">Projects</a>
         <a href="../contact/index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
         <a href="../resume/index.html">Resume</a>
     </nav>
 
     <h1>Projects</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium quis nam eveniet odio earum quasi cumque eaque, illum vitae quidem. Assumenda illum quas iste veniam reiciendis aperiam ab omnis quaerat.</p>
+        </article>
+        <article>
+            <h2>Cumque, veritatis praesentium! Vel?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Cum consectetur eos esse voluptatum, voluptates numquam explicabo enim autem quasi consequatur quae assumenda eius quidem nesciunt repellendus ex aliquid laudantium inventore velit labore. Laborum hic cumque non ullam necessitatibus!</p>
+        </article>
+        <article>
+            <h2>Aliquam minima sit quas!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Blanditiis beatae, dignissimos voluptates quod fuga distinctio suscipit itaque nemo enim rerum assumenda commodi inventore doloremque deleniti eaque eius. Temporibus porro, laboriosam quos tempore laudantium assumenda dignissimos voluptatum rerum ex.</p>
+        </article>
+        <article>
+            <h2>Voluptate doloremque velit voluptatum.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Ex ratione aut numquam facere accusantium repellat, facilis modi perferendis dolore asperiores aliquam, a earum amet odit, quod voluptatum dolorem laboriosam impedit nulla iste consequuntur voluptate maxime at? Eos, perferendis!</p>
+        </article>
+        <article>
+            <h2>Illo saepe nam iusto.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Temporibus incidunt distinctio quo dolores tempore, id, obcaecati ea labore esse rerum repellat expedita veniam exercitationem, soluta quia hic. Neque quod magni perspiciatis nulla harum? Natus quo at sint excepturi.</p>
+        </article>
+        <article>
+            <h2>Eius, ad? Repudiandae, ipsam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolorem animi et similique praesentium culpa est sequi eum exercitationem laborum, vel mollitia explicabo assumenda! A ipsum id expedita incidunt magnam. Aspernatur doloremque quisquam voluptatum explicabo necessitatibus tempore nulla saepe.</p>
+        </article>
+        <article>
+            <h2>Doloremque id sunt quibusdam?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Exercitationem numquam nobis maiores suscipit est perferendis quo quos aperiam odio, aliquam eius laboriosam praesentium, amet impedit eum voluptatem excepturi accusantium veritatis rerum pariatur! Temporibus blanditiis quibusdam impedit iste nisi.</p>
+        </article>
+        <article>
+            <h2>Nesciunt dolore obcaecati quam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Iste deleniti iusto praesentium. Aperiam sit similique possimus repellat veritatis officia, velit molestiae totam omnis obcaecati suscipit ea ratione deserunt voluptatum fuga, dolore debitis culpa labore odit quos architecto provident?</p>
+        </article>
+        <article>
+            <h2>Velit officiis porro ab.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Accusamus nisi aut esse non ratione aspernatur accusantium consectetur. Sunt aut totam laborum quos veniam, cupiditate maiores, error ratione quisquam quo facere, facilis harum nam rerum eveniet in vero necessitatibus.</p>
+        </article>
+        <article>
+            <h2>Similique facilis voluptatem doloremque!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Eaque laborum sapiente molestiae dolor quis asperiores est voluptatibus assumenda veritatis harum. Repudiandae, ab quisquam assumenda suscipit deserunt, vel dolor necessitatibus neque nulla cum laborum optio deleniti est laboriosam dicta.</p>
+        </article>
+        <article>
+            <h2>Autem natus quis aspernatur.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Maiores, facilis provident alias sequi corrupti corporis? Cumque laboriosam dolor pariatur fuga, temporibus veniam reiciendis itaque tenetur harum consectetur officia natus aut at ad optio aperiam corporis sint culpa necessitatibus.</p>
+        </article>
+        <article>
+            <h2>Quos aspernatur tempore officiis?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Consectetur excepturi explicabo modi ab, odit consequuntur cum voluptatibus rem officia commodi quos eligendi iure ratione nihil soluta quia, vitae nisi! Explicabo quo molestias reprehenderit non nemo expedita quaerat. Sit.</p>
+        </article>
+    </div>
 </body>
 </html>
