--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
-        <a href="index.html">Resume</a>
+        <a href="index.html" class="current">Resume</a>
     </nav>
 
     <h1>Resume</h1>
