--- a/projects/index.html
+++ b/projects/index.html
@@ -78,5 +78,6 @@
             <p>Consectetur excepturi explicabo modi ab, odit consequuntur cum voluptatibus rem officia commodi quos eligendi iure ratione nihil soluta quia, vitae nisi! Explicabo quo molestias reprehenderit non nemo expedita quaerat. Sit.</p>
         </article>
     </div>
+    <script type="module" src="global.js"></script>
 </body>
 </html>
