--- a/resume/index.html
+++ b/resume/index.html
@@ -78,5 +78,6 @@
         </ul>
         <time>Oct 2023 - Apr 2024</time>
     </article>
+    <script type="module" src="global.js"></script>
 </body>
 </html>
