--- a/contact/index.html
+++ b/contact/index.html
@@ -28,5 +28,6 @@
         </label>
         <button>Submit</button>
     </form>
+    <script type="module" src="global.js"></script>
 </body>
 </html>
