--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <nav>
+    <!-- <nav>
         <a href="index.html">Home</a>
         <a href="projects/index.html">Projects</a>
         <a href="contact/index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
         <a href="resume/index.html">Resume</a>
-    </nav>
+    </nav> -->
 
     <h1>Sri Supratik Talari</h1>
     <p>I am a Data Science Major at UCSD as a Junior.</p>
@@ -21,4 +21,4 @@
     <img src="images/profile.jpg" alt="A profile picture of Sri Supratik Talari smiling" width="300">
     <script type="module" src="global.js"></script>
 </body>
-</html>
+</html> 
