--- a/resume/index.html
+++ b/resume/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body class="resume">
-    <nav>
+    <!-- <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
-        <a href="index.html" class="current">Resume</a>
-    </nav>
+        <a href="index.html">Resume</a>
+    </nav> -->
 
     <h1>Resume</h1>
     <article>
