--- a/contact/index.html
+++ b/contact/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
-        <a href="index.html" class="current">Contact</a>
+        <a href="index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
         <a href="../resume/index.html">Resume</a>
-    </nav>
+    </nav> -->
     <h2>Contact</h2>
     <form action="mailto:youremail@example.com" method="POST" enctype="text/plain">
         <label> Email:
