--- a/projects/index.html
+++ b/projects/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <a href="../index.html">Home</a>
-        <a href="index.html" class="current">Projects</a>
+        <a href="index.html">Projects</a>
         <a href="../contact/index.html">Contact</a>
         <a href="https://github.com/SriSupratikTalari" target="_blank">GitHub</a>
         <a href="../resume/index.html">Resume</a>
-    </nav>
+    </nav> -->
 
     <h1>Projects</h1>
     <div class="projects">
