--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Sri Supratik Talari</title>
     <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <!-- <nav>
@@ -28,6 +29,6 @@
         </label>
         <button>Submit</button>
     </form>
-    <script type="module" src="global.js"></script>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
