--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <p>I am a Data Science Major at UCSD as a Junior.</p>
 
     <img src="images/profile.jpg" alt="A profile picture of Sri Supratik Talari smiling" width="300">
-    <script type="module" src="global.js"></script>
+    <script type="module" src="../global.js"></script>
 </body>
 </html> 
