lab-4 up to completed step 2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <p>I am a Data Science Major at UCSD as a Junior.</p>
 
     <img src="images/profile.jpg" alt="A profile picture of Sri Supratik Talari smiling" width="300">
+    <h2>Latest Projects</h2>
+    <div class="projects">
+    <!-- Dynamically added content will appear here -->
+    </div>
+
     <script type="module" src="../global.js"></script>
+    <script src="index.js" type="module" defer></script>
 </body>
 </html> 
