--- a/projects/index.html
+++ b/projects/index.html
@@ -15,9 +15,9 @@
         <a href="../resume/index.html">Resume</a>
     </nav> -->
 
-    <h1>Projects</h1>
+    <h1 class="projects-title">Projects</h1>
     <div class="projects">
-        <article>
+        <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium quis nam eveniet odio earum quasi cumque eaque, illum vitae quidem. Assumenda illum quas iste veniam reiciendis aperiam ab omnis quaerat.</p>
@@ -76,8 +76,9 @@
             <h2>Quos aspernatur tempore officiis?</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Consectetur excepturi explicabo modi ab, odit consequuntur cum voluptatibus rem officia commodi quos eligendi iure ratione nihil soluta quia, vitae nisi! Explicabo quo molestias reprehenderit non nemo expedita quaerat. Sit.</p>
-        </article>
+        </article> -->
     </div>
     <script type="module" src="../global.js"></script>
+    <script src="projects.js" type="module"></script>
 </body>
 </html>
