--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
+    <script src="index.js" type="module" defer></script>
     <!-- <nav>
         <a href="index.html">Home</a>
         <a href="projects/index.html">Projects</a>
@@ -21,10 +22,10 @@
     <img src="images/profile.jpg" alt="A profile picture of Sri Supratik Talari smiling" width="300">
     <h2>Latest Projects</h2>
     <div class="projects">
-    <!-- Dynamically added content will appear here -->
+        <!-- Dynamically added content will appear here -->
     </div>
 
-    <script type="module" src="../global.js"></script>
-    <script src="index.js" type="module" defer></script>
+    <script type="module" src="global.js"></script>
+    
 </body>
 </html> 
