--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <div class="projects">
         <!-- Dynamically added content will appear here -->
     </div>
+    <div id="profile-stats">
+
+    </div>
 
     <script type="module" src="global.js"></script>
     
