--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,34 @@
 
     <h1 class="projects-title">Projects</h1>
     <div class="projects">
+        <svg id="projects-plot" viewBox="-50 -50 100 100">
+            <ul class="legend">
+                <li style="--color: #e6194b">
+                  <span class="swatch" style="background-color: var(--color);"></span>
+                  apples <em>(1)</em>
+                </li>
+                <li style="--color: #3cb44b">
+                  <span class="swatch" style="background-color: var(--color);"></span>
+                  oranges <em>(2)</em>
+                </li>
+                <li style="--color: #ffe119">
+                  <span class="swatch" style="background-color: var(--color);"></span>
+                  mangos <em>(3)</em>
+                </li>
+                <li style="--color: #4363d8">
+                  <span class="swatch" style="background-color: var(--color);"></span>
+                  pears <em>(4)</em>
+                </li>
+                <li style="--color: #f58231">
+                  <span class="swatch" style="background-color: var(--color);"></span>
+                  limes <em>(5)</em>
+                </li>
+                <li style="--color: #911eb4">
+                  <span class="swatch" style="background-color: var(--color);"></span>
+                  cherries <em>(5)</em>
+                </li>
+              </ul>
+        </svg>
         <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
