--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
     </nav> -->
 
     <h1 class="projects-title">Projects</h1>
-    <div class="projects">
+    <div class="container">
         <svg id="projects-plot" viewBox="-50 -50 100 100">
             <ul class="legend">
                 <li style="--color: #e6194b">
@@ -44,6 +44,7 @@
                   cherries <em>(5)</em>
                 </li>
               </ul>
+        <input class="searchBar" type="search" aria-label="Search projects" placeholder="🔍 Search projects…"/>
         </svg>
         <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
