--- a/projects/index.html
+++ b/projects/index.html
@@ -16,6 +16,16 @@
     </nav> -->
 
     <h1 class="projects-title">Projects</h1>
+    <div class="container">
+        <svg id="projects-pie-plot" viewBox="-50 -50 100 100">
+          <!-- Pie chart content goes here -->
+        </svg>
+        <ul class="legend">
+          <!-- Legend items go here -->
+        </ul>
+    </div>
+    <input class="searchBar" type="search" aria-label="Search projects" placeholder="🔍 Search projects…"/>
+    <ul class="legend"></ul>
     <div class="projects">
         <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
