--- a/meta/index.html
+++ b/meta/index.html
@@ -6,14 +6,14 @@
   <body>
    <h1>Meta Data</h1>
    <p> the breakdown of code</p>
-   <div style="display: flex; align-items: baseline; margin-bottom: 1em;">
+   <div style="display: flex; align-items: baseline; margin-bottom: 1rem;">
     <label for="commit-progress" style="flex: 1;">
       Show commits until:
       <input type="range" id="commit-progress" min="0" max="100" value="100">
     </label>
-    <time id="commit-time" style="margin-left: auto;">--</time>
-  </div>
-    <div id="stats"></div>
+    <time id="commit-time" style="margin-left: auto;"></time>
+  </div> 
+   <div id="stats"></div>
     <script type="module" src="main.js"></script>
     <h2>Commits by time of day</h2>
     <div id="chart"></div>
