--- a/meta/index.html
+++ b/meta/index.html
@@ -13,6 +13,16 @@
     </label>
     <time id="commit-time" style="margin-left: auto;"></time>
   </div> 
+  <dl id="files">
+  <!-- we want the following structure for each file:
+  <div>
+    <dt>
+      <code>{file.name}</code>
+    </dt>
+    <dd>{file.lines.length} lines</dd>
+  </div>
+  -->
+  </dl>
    <div id="stats"></div>
     <script type="module" src="main.js"></script>
     <h2>Commits by time of day</h2>
