--- a/meta/index.html
+++ b/meta/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Meta Data</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
    <h1>Meta Data</h1>
@@ -13,20 +14,15 @@
     </label>
     <time id="commit-time" style="margin-left: auto;"></time>
   </div> 
-  <dl id="files">
-  <!-- we want the following structure for each file:
-  <div>
-    <dt>
-      <code>{file.name}</code>
-    </dt>
-    <dd>{file.lines.length} lines</dd>
-  </div>
-  -->
-  </dl>
    <div id="stats"></div>
+   <div id="scrolly-1">
+    <div id="scatter-story">some filler text here</div>
+    <div id="scatter-plot">
+      <div id="chart"></div>
+    </div>
+  </div>
     <script type="module" src="main.js"></script>
     <h2>Commits by time of day</h2>
-    <div id="chart"></div>
     <p id="selection-count">No commits selected</p>
     <dl id="commit-tooltip" class="info tooltip">
         <dt>Commit</dt>
@@ -40,5 +36,17 @@
         <!-- Add: Time, author, lines edited -->
     </dl>
     <dl id="language-breakdown" class="stats"></dl>
+    <dl id="files">
+      <!-- we want the following structure for each file:
+      <div>
+        <dt>
+          <code>{file.name}</code>
+        </dt>
+        <dd>
+          <div class="line"></div>
+        </dd>
+      </div>
+      -->
+    </dl>
   </body>
 </html>
